--- a/src/main/webapp/WEB-INF/content/admin/index-nav.html
+++ b/src/main/webapp/WEB-INF/content/admin/index-nav.html
@@ -21,14 +21,16 @@
     <script src="../plug-in/artTemplate/template.js"></script>
 
     <script src="../plug-in/sco/js/sco.message.js" type="text/javascript"></script>
+
     <link rel="stylesheet" href="../plug-in/sco/css/sco.message.css">
 
     <script src="../js/admin/index-nav.js"></script>
 
+    <script src="../js/bootDialog.js"></script>
+
 
 </head>
 <body>
-
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header"></div>
@@ -54,10 +56,10 @@
 <script id="personalCenter" type="text/html">
     <form class="form-horizontal">
         <div class="form-group">
-            <label for="userNmae" class="col-lg-3 control-label">用户名：</label>
+            <label for="userName" class="col-lg-3 control-label">用户名：</label>
 
             <div class="col-lg-7">
-                <input type="text" class="form-control" id="userNmae" value="{{userName}}" placeholder="请输入用户名"
+                <input type="text" class="form-control" id="userName" value="{{userName}}" placeholder="请输入用户名"
                        readonly>
             </div>
         </div>
@@ -83,12 +85,13 @@
 
         <div class="form-group">
             <label class="col-lg-3  control-label">用户状态：</label>
+            <input type="hidden" id="state" value="{{state}}">
             <div class="col-lg-7">
                 <div class="form-control">
                     {{if state == 0}}
-                        可用
+                    可用
                     {{else}}
-                        锁定
+                    锁定
                     {{/if}}
                 </div>
             </div>
