--- a/src/main/webapp/WEB-INF/content/admin/index-home.html
+++ b/src/main/webapp/WEB-INF/content/admin/index-home.html
@@ -6,13 +6,29 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="../plug-in/jquery-1.10.2.min.js" type="text/javascript" ></script>
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js" type="text/javascript" ></script>
 
-    <!--<script src="../plug-in/bootstrap/js/bootstrap.min.js" type="text/javascript" ></script>-->
+    <script src="//cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="../plug-in/bootstrap/css/bootstrap.min.css">
+    <script src="//cdn.bootcss.com/bootstrap3-dialog/1.35.2/js/bootstrap-dialog.min.js"></script>
+
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap3-dialog/1.35.2/css/bootstrap-dialog.min.css">
+
+
+    <script src="../plug-in/artTemplate/template.js"></script>
+
+    <script src="../plug-in/sco/js/sco.message.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" href="../plug-in/sco/css/sco.message.css">
+
+    <link rel="stylesheet" href="../css/public.css">
+
+    <script src="../js/bootDialog.js"></script>
 
     <script src="../js/service.js" type="text/javascript"></script>
+
 
     <title>首页</title>
 </head>
@@ -25,7 +41,7 @@
         </div>
         <div class="row">
             <div class="col-lg-2 col-md-2 col-sm-2">
-                <div id="left">left</div>
+                <div id="left"></div>
             </div>
             <div class="col-lg-10 col-md-10 col-sm-10">
                 <div id="rigth">rigth</div>
@@ -40,5 +56,6 @@
 </body>
 <script>
     $("#top").load("../admin/index-nav.html");
+    $("#left").load("../admin/index-left.html");
 </script>
 </html>
