--- a/src/main/webapp/WEB-INF/content/admin/index-nav.html
+++ b/src/main/webapp/WEB-INF/content/admin/index-nav.html
@@ -6,28 +6,25 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="../plug-in/jquery-1.10.2.min.js"></script>
+    <!--<script src="../plug-in/jquery-1.10.2.min.js"></script>-->
 
-    <script src="../plug-in/bootstrap/js/bootstrap.min.js"></script>
+    <!--<script src="../plug-in/bootstrap/js/bootstrap.min.js"></script>-->
 
-    <script src="../plug-in/bootstrapDialog/js/bootstrap-dialog.min.js"></script>
+    <!--<script src="../plug-in/bootstrapDialog/js/bootstrap-dialog.min.js"></script>-->
 
-    <link rel="stylesheet" href="../plug-in/bootstrap/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="../plug-in/bootstrap/css/bootstrap.min.css">-->
 
-    <link rel="stylesheet" href="../plug-in/bootstrapDialog/css/bootstrap-dialog.min.css">
+    <!--<link rel="stylesheet" href="../plug-in/bootstrapDialog/css/bootstrap-dialog.min.css">-->
 
     <link rel="stylesheet" href="../css/admin/top.css">
 
-    <script src="../plug-in/artTemplate/template.js"></script>
+    <!--<script src="../plug-in/artTemplate/template.js"></script>-->
 
-    <script src="../plug-in/sco/js/sco.message.js" type="text/javascript"></script>
+    <!--<script src="../plug-in/sco/js/sco.message.js" type="text/javascript"></script>-->
 
-    <link rel="stylesheet" href="../plug-in/sco/css/sco.message.css">
+    <!--<link rel="stylesheet" href="../plug-in/sco/css/sco.message.css">-->
 
     <script src="../js/admin/index-nav.js"></script>
-
-    <script src="../js/bootDialog.js"></script>
-
 
 </head>
 <body>
