--- a/src/main/webapp/WEB-INF/content/admin/login.html
+++ b/src/main/webapp/WEB-INF/content/admin/login.html
@@ -12,9 +12,13 @@
 
     <script type="text/javascript" src="../plug-in/validate/js/bootstrapValidator.js"type="text/javascript"></script>
 
+    <script type="text/javascript" src="../plug-in/sco/js/sco.message.js" type="text/javascript"></script>
+
     <link rel="stylesheet" href="../plug-in/bootstrap/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="../plug-in/validate/css/bootstrapValidator.css">
+
+    <link rel="stylesheet" href="../plug-in/sco/css/sco.message.css">
 
     <link rel="stylesheet" href="../css/admin/login.css">
 
@@ -30,7 +34,6 @@
     <div class="panel panel-primary">
         <p class="panel-heading">Sign in</p>
         <div class="panel-body">
-            <div class="alert alert-danger text-center" id="signError"></div>
             <form class="form-horizontal" id="loginForm" method="post">
                 <div class="form-group">
                     <label for="userName" class="col-lg-3 control-label">用户名：</label>
