Signed-off-by: pxh <pxh@timevale.com> 1、修改html页面中css、js访问路径 2、修改web.xml

--- a/src/main/webapp/WEB-INF/content/admin/home/index-home.html
+++ b/src/main/webapp/WEB-INF/content/admin/home/index-home.html
@@ -17,17 +17,17 @@
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap3-dialog/1.35.2/css/bootstrap-dialog.min.css">
 
 
-    <script src="../plug-in/artTemplate/template.js"></script>
+    <script src="/plug-in/artTemplate/template.js"></script>
 
-    <script src="../plug-in/sco/js/sco.message.js" type="text/javascript"></script>
+    <script src="/plug-in/sco/js/sco.message.js" type="text/javascript"></script>
 
-    <link rel="stylesheet" href="../plug-in/sco/css/sco.message.css">
+    <link rel="stylesheet" href="/plug-in/sco/css/sco.message.css">
 
-    <link rel="stylesheet" href="../css/public.css">
+    <link rel="stylesheet" href="/css/public.css">
 
-    <script src="../js/bootDialog.js"></script>
+    <script src="/js/bootDialog.js"></script>
 
-    <script src="../js/service.js" type="text/javascript"></script>
+    <script src="/js/service.js" type="text/javascript"></script>
 
 
     <title>首页</title>
@@ -53,7 +53,7 @@
 </div>
 </body>
 <script>
-    $("#top").load("../admin/index-nav.html");
-    $("#left").load("../admin/index-left.html");
+    $("#top").load("../home/index-nav.html");
+    $("#left").load("../home/index-left.html");
 </script>
 </html>
