--- a/src/main/webapp/WEB-INF/content/admin/user/userList.html
+++ b/src/main/webapp/WEB-INF/content/admin/user/userList.html
@@ -6,10 +6,10 @@
 
     <title>用户列表</title>
 
-    <script src="../js/page.js" type="text/javascript"></script>
-    <script src="../js/admin/user/userList.js" type="text/javascript"></script>
+    <script src="/js/page.js" type="text/javascript"></script>
+    <script src="/js/admin/user/userList.js" type="text/javascript"></script>
 
-    <link href="../css/admin/user/userList.css" rel="stylesheet">
+    <link href="/css/admin/user/userList.css" rel="stylesheet">
 
 </head>
 <body>
