1、全局异常捕获修改

--- a/src/main/webapp/WEB-INF/content/admin/login.html
+++ b/src/main/webapp/WEB-INF/content/admin/login.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <div class="panelDiv">
-    <div class="panel panel-primary">
+    <div class="panel panel-default">
         <p class="panel-heading">Sign in</p>
         <div class="panel-body">
             <form class="form-horizontal" id="loginForm" method="post">
@@ -49,7 +49,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-lg-2 col-lg-offset-8">
-                        <button type="submit" id="login" class="btn btn-primary">登录</button>
+                        <button type="submit" id="login" data-loading-text="Loading..." class="btn btn-primary">登录</button>
                     </div>
                 </div>
             </form>
