--- a/src/main/webapp/WEB-INF/content/admin/user/userList.html
+++ b/src/main/webapp/WEB-INF/content/admin/user/userList.html
@@ -11,12 +11,21 @@
 
     <link href="/css/admin/user/userList.css" rel="stylesheet">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.js"></script>
+
+    <!-- Latest compiled and minified Locales -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/locale/bootstrap-table-zh-CN.min.js"></script>
+
 </head>
 <body>
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-7 ">
-            <div class="panel panel-primary">
+            <div class="panel panel-default">
                 <p class="panel-heading">用户列表</p>
                 <div class="panel-body">
                     <div class="row">
@@ -51,7 +60,7 @@
                     </div>
                     <div class="row">
                         <div class=" div-tab">
-                            <table class="table text-center" id="userListTab"></table>
+                            <table  id="userListTab"></table>
                         </div>
                     </div>
                     <div class="row">
